--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,28 @@
 {
-  "name": "webfactor/:package_name",
-  "description": ":package_description",
+  "name": "blessingdube/laravel-recurring",
+  "description": "Package for adding recurring functionality to laravel models.",
   "keywords": [
-    "webfactor",
-    ":package_name"
+    "blessingdube",
+    "laravel-recurring"
   ],
-  "homepage": "https://github.com/webfactor/:package_name",
+  "homepage": "https://github.com/blessingdube/laravel-recurring",
   "license": "MIT",
   "require": {
-    "php": "^7.1"
+    "php": "^7.1",
+    "illuminate/database": "^7.18",
+    "nesbot/carbon": "^2.36"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.0"
   },
   "autoload": {
     "psr-4": {
-      "Webfactor\\Package\\": "src"
+      "BlessingDube\\Recurring\\": "src"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Webfactor\\Package\\Test\\": "tests"
+      "BlessingDube\\Recurring\\Test\\": "tests"
     }
   },
   "scripts": {
@@ -32,11 +34,8 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Webfactor\\Package\\PackageServiceProvider"
-      ],
-      "aliases": {
-        "Package": "Webfactor\\Package\\PackageFacade"
-      }
+        "BlessingDube\\Recurring\\RecurringServiceProvider"
+      ]
     }
   }
 }
