--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
   "license": "MIT",
   "require": {
     "php": "^7.1",
-    "illuminate/database": "^7.18",
-    "nesbot/carbon": "^2.36"
+    "illuminate/database": "^7.0",
+    "nesbot/carbon": "^2.17"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.0"
+    "phpunit/phpunit": "^6.0|^7.0|^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
