--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
   "homepage": "https://github.com/blessingdube/laravel-recurring",
   "license": "MIT",
   "require": {
-    "illuminate/database": "^5.0|^6.0|^7.0",
-    "illuminate/support": "^5.0|^6.0|^7.0",
-    "nesbot/carbon": "^2.17"
+    "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
+    "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
+    "nesbot/carbon": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.0|^7.0|^8.0|^9.0"
+    "phpunit/phpunit": "^^7.0|^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
