--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "nesbot/carbon": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^^7.0|^8.0|^9.0"
+    "phpunit/phpunit": "^7.0|^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
