--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
   "homepage": "https://github.com/blessingdube/laravel-recurring",
   "license": "MIT",
   "require": {
+    "php": ">=5.6",
     "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
     "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
     "nesbot/carbon": "^2.0"
