--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
   "homepage": "https://github.com/blessingdube/laravel-recurring",
   "license": "MIT",
   "require": {
-    "php": ">=5.6",
-    "illuminate/database": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
-    "illuminate/support": "~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
+    "php": "^7.1.3",
+    "illuminate/database": "^5.8 || ^6.0 || ^7.0",
+    "illuminate/support": "^5.8 || ^6.0 || ^7.0",
     "nesbot/carbon": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0|^8.0|^9.0"
+    "phpunit/phpunit": "^7.5 || ^8.4 || ^9.0"
   },
   "autoload": {
     "psr-4": {
