--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit"
+    "test": "vendor\\bin\\phpunit"
   },
   "config": {
     "sort-packages": true
