--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "phpunit/phpunit": "^7.5 || ^8.4 || ^9.0"
   },
   "autoload": {
+    "classmap": [
+      "database/migrations"
+    ],
     "psr-4": {
       "BlessingDube\\Recurring\\": "src"
     }
