--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
   "homepage": "https://github.com/blessingdube/laravel-recurring",
   "license": "MIT",
   "require": {
-    "php": "^7.1.3",
-    "illuminate/database": "^5.8 || ^6.0 || ^7.0",
-    "illuminate/support": "^5.8 || ^6.0 || ^7.0",
+    "php": "^7.1.3|^8.0",
+    "illuminate/database": "^5.8 || ^6.0 || ^7.0 || ^8.0",
+    "illuminate/support": "^5.8 || ^6.0 || ^7.0 || ^8.0",
     "nesbot/carbon": "^2.0"
   },
   "require-dev": {
