--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-  "name": "blessingdube/laravel-recurring",
+  "name": "oss-tools/laravel-recurring",
   "description": "Package for adding recurring functionality to laravel models.",
   "keywords": [
-    "blessingdube",
+    "oss-tools",
     "laravel-recurring"
   ],
-  "homepage": "https://github.com/blessingdube/laravel-recurring",
+  "homepage": "https://github.com/oss-tools/laravel-recurring",
   "license": "MIT",
   "require": {
     "php": "^7.1.3|^8.0",
@@ -18,16 +18,16 @@
   },
   "autoload": {
     "psr-4": {
-      "BlessingDube\\Recurring\\": "src"
+      "OSSTools\\Recurring\\": "src"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "BlessingDube\\Recurring\\Test\\": "tests"
+      "OSSTools\\Recurring\\Test\\": "tests"
     }
   },
   "scripts": {
-    "test": "vendor\\bin\\phpunit"
+    "test": "vendor/bin/phpunit"
   },
   "config": {
     "sort-packages": true
@@ -35,7 +35,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "BlessingDube\\Recurring\\Providers\\RecurringServiceProvider"
+        "OSSTools\\Recurring\\Providers\\RecurringServiceProvider"
       ]
     }
   }
